# Crud-with-Rust

./: .env  Cargo.toml
src/: app.rs  config.rs  main.rs
src/routes/: mod.rs  orders.rs  products.rs  users.rs
src/routes/orders/: handler.rs  mod.rs
src/routes/products/: handler.rs  mod.rs
src/routes/users/: hanlder.rs  mod.rs
