[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-web-validator = "6.0.0"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
] }
tokio = { version = "1.45.1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
