[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-web-validator = "6.0.0"
bcrypt = "0.17.0"
bigdecimal = { version = "0.4.8", features = ["serde"] }
bytes = "1.10.1"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "bigdecimal"] }
tokio = { version = "1.45.1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
